Feature: Ignore words immediately preceded by a dot